# vacon

./: .gitignore  fake.sdp  meson.build  meson.options  signaling-server.py  stopwatch.py
.github/workflows/: build.yml
.packaging/debian/: changelog.in  control  copyright  rules
src/: app.cpp  app.hpp  args.cpp  backward.cpp  base64.hpp  camera_encoder.cpp  camera_encoder.hpp  camera_sender.cpp  codecs.hpp  common.cpp  common.hpp  decoder_receiver.cpp  event.cpp  event.hpp  invite.cpp  invite.hpp  main.cpp  network_handler.cpp  network_handler.hpp  packet_ref.cpp  packet_ref.hpp  rtc_packet.hpp  rtc_utils.cpp  rtc_utils.hpp  rtp_depacketizer.cpp  rtp_depacketizer.hpp  sdl.cpp  sdlmain.cpp  sink_receiver.cpp  stats.hpp  ui.cpp  util.cpp  util.hpp  v4l2_ffmpeg_input_vaapi_encode.c  vacon.cpp  video_receiver.cpp  vpacket.hpp
src/linux/: camera.cpp  camera.hpp  camera_frame.cpp  camera_frame.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  font.cpp  font.hpp  mfx.cpp  mfx.hpp  mfx_loader.cpp  mfx_loader.hpp  typedefs.hpp  video_frame.cpp  video_frame.hpp  video_handler.cpp  video_handler.hpp
src/plplay/: common.h  main.c  pl_thread_pthread.h  plplay.c  plplay.h  settings.c  ui.c  utils.c  window_glfw.c
src/rtp/: generic_depacketizer.cpp  generic_depacketizer.hpp  generic_packetizer.cpp  generic_packetizer.hpp
src/sdl/: app.cpp  app.hpp  texture.cpp  texture.hpp
subprojects/: .gitignore  backward-cpp.wrap  glfw.wrap  imgui.wrap  libdatachannel.wrap  libhydrogen.wrap  libplacebo.wrap  nuklear.wrap  readerwriterqueue.wrap
subprojects/packagefiles/backward-cpp/: libdwarf_include_fix.patch  meson.build
subprojects/packagefiles/imgui/: meson.build  meson_options.txt
subprojects/packagefiles/libplacebo/: git_version_h.patch  glad_compiler_quiet.patch  version_h.patch
subprojects/packagefiles/nuklear/: meson.build
subprojects/packagefiles/readerwriterqueue/: meson.build
